src/frontend/snapshots/jjj__frontend__change_buffer__tests__snapshot_revision_bottom_line.snap
---
source: src/frontend/change_buffer.rs
expression: terminal.backend()
---
"  |  (empty) This is a test                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
