src/frontend/snapshots/jjj__frontend__change_buffer__tests__snapshot_revision_top_line.snap
---
source: src/frontend/change_buffer.rs
expression: terminal.backend()
---
"  >  12345678 John Smith 2 days ago                            one two abcdefgh "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
